HTML swap totalrev and movies

--- a/cinechain.html
+++ b/cinechain.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>cinechain</title>
     <link rel="stylesheet" href="cinechain.css" />
     <script src="cinechain.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
@@ -22,10 +22,10 @@
     <main style="margin-left: 320px; padding: 32px">
       <section id="dashboard">
         <h1>Dashboard</h1>
-        <div style="display: flex; gap: 32px; flex-wrap: wrap">
+        <div style="display: flex; gap: 10px; flex-wrap: wrap">
           <div class="metric">
-            <h2>Total Revenue</h2>
-            <p id="totalRevenue">$50</p>
+            <h2>Movies Distributing</h2>
+            <p id="moviesDistributing">0</p>
           </div>
           <div class="metric">
             <h2>Total Attendance</h2>
@@ -36,8 +36,8 @@
             <p id="activeChannels">0</p>
           </div>
           <div class="metric">
-            <h2>Movies Distributing</h2>
-            <p id="moviesDistributing">0</p>
+            <h2>Total Revenue</h2>
+            <p id="totalRevenue">$50</p>
           </div>
         </div>
 
