--- a/cinechain.html
+++ b/cinechain.html
@@ -12,6 +12,7 @@
   <body>
     <nav class="Sidebar">
       <ul>
+        <h1 style="margin-left: 20px">CineChain</h1>
         <li class="selected">Dashboard</li>
         <li>Movies</li>
         <li>Platforms</li>
@@ -62,6 +63,12 @@
             ></select>
           </div>
           <canvas id="revenueChart" width="1000" height="400"></canvas>
+        </div>
+      </section>
+
+      <section id="movies">
+        <h1>MOVIES</h1>
+        <div></div>
         </div>
       </section>
     </main>
