--- a/cinechain.html
+++ b/cinechain.html
@@ -66,10 +66,64 @@
         </div>
       </section>
 
-      <section id="movies">
-        <h1>MOVIES</h1>
-        <div></div>
-        </div>
+<section id="movies">
+  <h1>Movies</h1>
+
+<div class="card movie-card">
+  <div class="movie-info">
+    <h3>Top Movie</h3>
+    <p>Movie: <strong>Interstellar</strong></p>
+    <p>Revenue: $150,000</p>
+    <p>Rating: 9.2/10</p>
+  </div>
+  <img src="images/interstellar.webp" alt="Interstellar Poster" />
+</div>
+
+
+  <div class="card movie-card">
+    
+    <div class="movie-info">
+      <h3>Second Movie</h3>
+      <p>Movie: <strong>Inception</strong></p>
+      <p>Revenue: $120,000</p>
+      <p>Rating: 8.9/10</p>
+    </div>
+    <img src="images/inception.webp" alt="Inception Poster" />
+  </div>
+
+  <div class="card movie-card">
+    
+    <div class="movie-info">
+      <h3>Third Movie</h3>
+      <p>Movie: <strong>The Dark Knight</strong></p>
+      <p>Revenue: $110,000</p>
+      <p>Rating: 9.0/10</p>
+    </div>
+    <img src="images/darkknight.webp" alt="The Dark Knight Poster" />
+  </div>
+</section>
+
+      <section id="platforms">
+        <h1>Platforms</h1>
+        <div>
+          <div class="card">
+            <h3>Top Platform</h3>
+            <p>Platform: <strong>Netflix</strong></p>
+            <p>Movies Hosted: 150</p>
+            <p>Total Views: 1,200,000</p>
+          </div>
+          <div class="card">
+            <h3>Second Platform</h3>
+            <p>Platform: <strong>Amazon Prime</strong></p>
+            <p>Movies Hosted: 120</p>
+            <p>Total Views: 950,000</p>
+          </div>
+          <div class="card">
+            <h3>Third Platform</h3>
+            <p>Platform: <strong>Disney+</strong></p>
+            <p>Movies Hosted: 100</p>
+            <p>Total Views: 800,000</p>
+          </div>
       </section>
     </main>
   </body>
