link added (not complete)

--- a/cinechain.html
+++ b/cinechain.html
@@ -13,10 +13,10 @@
     <nav class="Sidebar">
       <ul>
         <h1 style="margin-left: 20px">CineChain</h1>
-        <li class="selected">Dashboard</li>
-        <li>Movies</li>
-        <li>Platforms</li>
-        <li>Stakeholders</li>
+        <li class="selected"><a href="#dashboard">Dashboard</a></li>
+        <li><a href="#movies">Movies</a></li>
+        <li><a href="#platforms">Platforms</a></li>
+        <li><a href="#stakeholders"></a>Stakeholders<a></li>
       </ul>
     </nav>
 
