--- a/cinechain.html
+++ b/cinechain.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="cinechain.css" />
     <script src="cinechain.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="ai.js"></script> 
+    <script src="cinechain.js" defer></script>
   </head>
 
   <body>
@@ -128,3 +131,6 @@
     </main>
   </body>
 </html>
+
+
+<!---->
