--- a/cinechain.html
+++ b/cinechain.html
@@ -44,6 +44,7 @@
             display: none;
         }
     </style>
+    <script src="https://cdn.socket.io/4.7.5/socket.io.min.js"></script>
   </head>
   <body>
     <nav class="Sidebar">
