--- a/cinechain.html
+++ b/cinechain.html
@@ -21,7 +21,6 @@
       </ul>
     </nav>
     <main>
-      
       <section id="dashboard">
         <h1>Dashboard</h1>
         <div style="display: flex; gap: 10px; flex-wrap: wrap">
@@ -43,9 +42,24 @@
           </div>
         </div>
         <div style="margin-top: 40px">
-          <div style="display: flex; align-items: center; gap: 16px; margin-bottom: 16px;">
+          <div
+            style="
+              display: flex;
+              align-items: center;
+              gap: 16px;
+              margin-bottom: 16px;
+            "
+          >
             <h2 style="margin: 0">Revenue Performance</h2>
-            <select id="monthSelector" style="padding: 8px 12px; border-radius: 6px; border: 1px solid #ccc; font-size: 1em;"></select>
+            <select
+              id="monthSelector"
+              style="
+                padding: 8px 12px;
+                border-radius: 6px;
+                border: 1px solid #ccc;
+                font-size: 1em;
+              "
+            ></select>
           </div>
           <canvas id="revenueChart" width="1000" height="400"></canvas>
         </div>
