--- a/cinechain.html
+++ b/cinechain.html
@@ -45,7 +45,7 @@
           <div class="metric metric-orange">
             <div class="icon-value">
               <i class="fas fa-dollar-sign"></i>
-              <p id="totalRevenue">$50</p>
+              <p id="totalRevenue">&#8377;50</p>
             </div>
             <h2>Total Revenue</h2>
           </div>
