--- a/cinechain.html
+++ b/cinechain.html
@@ -45,7 +45,7 @@
           <div class="metric metric-orange">
             <div class="icon-value">
               <i class="fas fa-dollar-sign"></i>
-              <p id="totalRevenue">&#8377;50</p>
+              <p id="totalRevenue">$50</p>
             </div>
             <h2>Total Revenue</h2>
           </div>
@@ -80,9 +80,8 @@
             <h3>Top Movie</h3>
             <p>Movie: <strong>Interstellar</strong></p>
             <p>Revenue: $150,000</p>
-            <p>Rating: 9.2/10</p>
+            <p>Audience: 10,000</p>
           </div>
-          <img src="images/interstellar-placeholder.png" alt="Interstellar Poster" />
         </div>
         
         <div class="card movie-card second-movie">
@@ -90,9 +89,8 @@
             <h3>Second Movie</h3>
             <p>Movie: <strong>Inception</strong></p>
             <p>Revenue: $120,000</p>
-            <p>Rating: 8.9/10</p>
+            <p>Audience: 30,0000</p>
           </div>
-          <img src="images/inception-placeholder.png" alt="Inception Poster" />
         </div>
         
         </section>
