--- a/cinechain.html
+++ b/cinechain.html
@@ -44,8 +44,8 @@
           </div>
           <div class="metric metric-orange">
             <div class="icon-value">
-              <i class="fas fa-dollar-sign"></i>
-              <p id="totalRevenue">$50</p>
+              <i class="fas fa-indian-rupee-sign"></i>
+              <p id="totalRevenue">₹50</p>
             </div>
             <h2>Total Revenue</h2>
           </div>
@@ -79,7 +79,7 @@
           <div class="movie-info">
             <h3>Top Movie</h3>
             <p>Movie: <strong>Interstellar</strong></p>
-            <p>Revenue: $150,000</p>
+            <p>Revenue: ₹150,000</p>
             <p>Audience: 10,000</p>
           </div>
         </div>
@@ -88,7 +88,7 @@
           <div class="movie-info">
             <h3>Second Movie</h3>
             <p>Movie: <strong>Inception</strong></p>
-            <p>Revenue: $120,000</p>
+            <p>Revenue: ₹120,000</p>
             <p>Audience: 30,0000</p>
           </div>
         </div>
