--- a/cinechain.html
+++ b/cinechain.html
@@ -76,7 +76,7 @@
       <!-- Movies Section -->
       <section id="movies" class="content-section">
         <h1>Movies</h1>
-        <!-- Movie cards will be dynamically inserted here by cinechain.js -->
+        <div id="movies-container"></div>
       </section>
 
     </main>
